<resources>
    <string name="app_name">OasisAdminApp17</string>
    <string name="title_activity_choice_page">ChoicePage</string>
    <string name="dle_tab">DLE</string>
    <string name="controlz_tab">Controlz</string>
    <string name="title_activity_sell_validate_ticket">SellValidateTicket</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_sell_check_dle">SellCheckDLE</string>
    <string name="title_home">Sell</string>
    <string name="title_notifications">Check</string>
    <string name="validate_prof_show">Validate Prof Show</string>
    <string name="add_prof_show">Add Prof Show</string>
    <string name="scan_qr_code">Scan QR COde</string>
    <string name="prof_prompt">Select a Prof-Show</string>
    <string name="added_status">Added Status</string>
    <string name="no_of_rs_10_notes">No of Rs.10 notes</string>
    <string name="no_of_rs_20_notes">No of Rs.20 notes</string>
    <string name="no_of_rs_50_notes">No of Rs.50 notes</string>
    <string name="no_of_rs_100_notes">No of Rs.100 notes</string>
    <string name="no_of_rs_200_notes">No of Rs.200 notes</string>
    <string name="no_of_rs_500_notes">No of Rs.500 notes</string>
    <string name="no_of_rs_2000_notes">No of Rs.2000 notes</string>
    <string name="for_bill">For Bill</string>
    <string name="no_of_tickets">No of Tickets</string>
    <string name="staff_member_name">Staff Member Name</string>
    <string name="scan_qr_code1">Scan QR Code</string>
    <string name="manage_events">Manage Events</string>
    <string name="button">Button</string>
    <string name="notifications">Notifications</string>
    <string name="auth_details_for_clubs_departments">Auth Details for Clubs/Departments</string>
    <string name="push">Push</string>
    <string name="enter_notice">Enter Notice</string>
    <string name="notice">Notice</string>
    <string name="ems">EMS</string>
    <string-array name="prof_shows">
        <item>testprofshow1</item>
        <item>testprofshow2</item>
    </string-array>
</resources>
