<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sammy.oasisadminapp17.Notifications">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/notice"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="97dp"
        android:layout_marginBottom="25dp"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_notice"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="53dp"
        android:layout_above="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/push"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="180dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="196dp" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp" />
</RelativeLayout>
